# eight-puzzle-search

./: .gitignore  LICENSE  README.md  README_en.md  pyproject.toml
src/eight_puzzle_search/: __init__.py
src/eight_puzzle_search.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
